app/assets/stylesheets/users.scss
.premium-badge{
  background: #FDD835;
}

.admin-badge{
  background: #4FC3F7;
}

.premium-badge, .admin-badge, .custom-badge{
  a{
    text-decoration: none;
  }

  text-decoration: none;
  font-size: .7em;
  padding: 5px;
  border-radius: 3px;
  margin-right: 5px;
}

